--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="d-sm-block d-lg-none title-logo"><h5 class="aletheia-name heart"><span class = "crown"></span><span class="aletheia-a first-a">a</span><span></span>lethei<span class="aletheia-a">a</span><span></span> <span class="black">Ther<span class="aletheia-a">a</span><span></span>peutics</span></h5>
       </div>
 
-      <div class="logocontainer">      <a class="navbar-brand" href="#"><img class="navbar-logo" src="images/favicon/ALogo.svg" alt="Envision Logo" width="64"></a></div>
+      <div class="logocontainer"><a class="navbar-brand" href="#"><h3 class="aletheia-name heart"><span class = "crown"></span><span class="aletheia-a first-a crown-mid">a</span><span></span></h3></a></div>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -121,6 +121,34 @@
         </ul>
   
   
+      </div>
+    </div>
+
+    <div id="Location" class="location container-fluid">
+      <div id="Location">
+        <div class="row">
+          <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
+              <div class="frame">
+                <!--     Google Maps Insert     -->
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10759.606399097345!2d-122.3340117302246!3d47.60860299999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf448ba596c1879e9!2sEnvision%20Therapies!5e0!3m2!1sen!2sus!4v1664090990981!5m2!1sen!2sus"
+                  width="280" height="210" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+          </div>
+          <div class="col-12 col-lg-4">
+                <div class="textbox-border">
+                  <h5>Aletheia Therapeutics is located on the 7th floor of Cabrini Tower</h5>
+                  <h4>901 Boren Avenue<br>Suite 701<br>Seattle, Washington 98104</h4>
+                  <h4><a href="tel:+1-206-473-2435">(206) 473-2435</a></h4>
+            </div>
+          </div>
+          <div class="tour-video col-12 col-lg-4 pt-4 pt-lg-0 d-flex justify-content-center align-items-center">
+              <div class="frame">
+                <iframe width="280" height="210" src="https://www.youtube.com/embed/ivGcfBvQlBY">
+                </iframe>
+              </div>
+          </div>
+        </div>
       </div>
     </div>
 
