--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="INCOMING CLIENT FORMS. Michael Sibrava provides evidence based therapy shaped by experience and adapted to each client's needs.">
-  <meta name="keywords" content="counseling, PTSD, therapy, psychotherapy, anxiety, premera, counselor, seattle, seattle counselor">
+  <meta name="description"
+    content="INCOMING CLIENT FORMS. Michael Sibrava provides evidence based therapy shaped by experience and adapted to each client's needs.">
+  <meta name="keywords"
+    content="counseling, PTSD, therapy, psychotherapy, anxiety, premera, counselor, seattle, seattle counselor">
   <!--      Open Graph Tags-->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Aletheia Therapeutics - Michael Sibrava LMHC" />
-  <meta property="og:description" content="Trauma informed counseling in Seattle, Washington."/>
+  <meta property="og:description" content="Trauma informed counseling in Seattle, Washington." />
   <meta property="og:url" content="https://aletheiapllc.com/" />
-  <meta property="og:image" content="https://aletheiapllc.com/images/ogimage.jpg"/>
-  <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
+  <meta property="og:image" content="https://aletheiapllc.com/images/ogimage.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <!--      Favicons                           -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
@@ -28,10 +30,11 @@
   </style>
 
   <!--         Google Icons                       -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!--       Bootstrap 5.2.1                     -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
   <!--       Bootstrap Icons                      -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -45,14 +48,21 @@
   <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container-fluid">
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <!--Shows only when navbar is collapsed / See h1 Aletheia Therapeutics that disappears if collapsed-->
-      <div class="d-sm-block d-lg-none title-logo"><h5 class="aletheia-name heart"><span class = "crown"></span><span class="aletheia-a first-a">a</span><span></span>lethei<span class="aletheia-a">a</span><span></span> <span class="black">Ther<span class="aletheia-a">a</span><span></span>peutics</span></h5>
+      <div class="d-sm-block d-lg-none title-logo">
+        <h5 class="aletheia-name heart"><span class="crown"></span><span
+            class="aletheia-a first-a">a</span><span></span>lethei<span class="aletheia-a">a</span><span></span> <span
+            class="black">Ther<span class="aletheia-a">a</span><span></span>peutics</span></h5>
       </div>
 
-      <div class="logocontainer"><a class="navbar-brand" href="#"><h3 class="aletheia-name heart"><span class = "crown"></span><span class="aletheia-a first-a crown-mid">a</span><span></span></h3></a></div>
+      <div class="logocontainer"><a class="navbar-brand" href="#">
+          <h3 class="aletheia-name heart"><span class="crown"></span><span
+              class="aletheia-a first-a crown-mid">a</span><span></span></h3>
+        </a></div>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -78,87 +88,171 @@
       </div>
     </div>
   </nav>
-    
-<div id="Home" class="home container-fluid">
+
+  <div id="Home" class="home container-fluid">
     <div class="title-logo">
-      <h1 class="aletheia-name heart"><span class = "crown"></span><span class="aletheia-a first-a crown-mid">a</span><span></span>lethei<span class="aletheia-a">a</span><span></span> <span class="black">Ther<span class="aletheia-a">a</span><span></span>peutics</span></h1>  
-      </div>
-      <div class="content row align-items-center">
-        <div class="col-lg col-md-3 offset-md-9 pb-5">
-          <h2>New Thinking. New Growth.</h2>
-        </div>
+      <h1 class="aletheia-name heart"><span class="crown"></span><span
+          class="aletheia-a first-a crown-mid">a</span><span></span>lethei<span class="aletheia-a">a</span><span></span>
+        <span class="black">Ther<span class="aletheia-a">a</span><span></span>peutics</span></h1>
+    </div>
+    <div class="content row align-items-center">
+      <div class="col-lg col-md-3 offset-md-9 pb-5">
+        <h2>New Thinking. New Growth.</h2>
       </div>
     </div>
+  </div>
 
-    <div id="About" class="about container-fluid">
-      <div class="row align-items-center">
-        <div class="col-md-7">
-          <h3>Michael Sibrava, NCC, LMHC</h3>
-          <h5>he/him</h5>
-          <p class="text-center text-md-start">Michael Sibrava brings over 20 years of experience working in community mental health settings, private practice, group and classroom settings.
-            His experiences working with a wide range of people informs his ability to provide flexible, adaptive treatment to meet a person’s unique needs.
-            Having worked in such diverse settings allowed to Michael recognize that each person has their own foundation of talents and resources from which to grow. This insight instructs the respect Michael has for each person’s experience and
-            dignity.</p>
-        </div>
-        <div class="photo col">
+  <div id="About" class="about container-fluid">
+    <div class="row align-items-center">
+      <div class="col-md-7">
+        <h3>Michael Sibrava, NCC, LMHC</h3>
+        <h5>he/him</h5>
+        <p class="text-center text-md-start">Michael Sibrava brings over 20 years of experience working in community
+          mental health settings, private practice, group and classroom settings.
+          His experiences working with a wide range of people informs his ability to provide flexible, adaptive
+          treatment to meet a person’s unique needs.
+          Having worked in such diverse settings allowed to Michael recognize that each person has their own foundation
+          of talents and resources from which to grow. This insight instructs the respect Michael has for each person’s
+          experience and
+          dignity.</p>
+      </div>
+      <div class="photo col">
         <img src="images/headshot.jpg" alt="Michael Sibrava" class="portrait p-2">
       </div>
-      </div>
-      <div class="training pt-4">
-        <ul>
-          <li>
-            <span class="certifaction">EMDR Trained</span>
-          </li>
-          <li>
-            <span class="certifaction">Certified Clinical Trauma Professional</span>
-          </li>
-          <li>
-            <span class="certifaction">ADHD - Certified Clinical Services Provide</span>
-          </li>
-          <li>
-            <span class="certifaction">PEERS<sup>&reg</sup> Certified Provider</span>
-          </li>
-        </ul>
-  
-  
-      </div>
     </div>
+    <div class="training pt-4">
+      <ul>
+        <li>
+          <span class="certifaction">EMDR Trained</span>
+        </li>
+        <li>
+          <span class="certifaction">Certified Clinical Trauma Professional</span>
+        </li>
+        <li>
+          <span class="certifaction">ADHD - Certified Clinical Services Provide</span>
+        </li>
+        <li>
+          <span class="certifaction">PEERS<sup>&reg</sup> Certified Provider</span>
+        </li>
+      </ul>
 
-    <div id="Location" class="location container-fluid">
-      <div id="Location">
-        <div class="row">
-          <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-              <div class="frame">
-                <!--     Google Maps Insert     -->
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10759.606399097345!2d-122.3340117302246!3d47.60860299999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf448ba596c1879e9!2sEnvision%20Therapies!5e0!3m2!1sen!2sus!4v1664090990981!5m2!1sen!2sus"
-                  width="280" height="210" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
-          </div>
-          <div class="col-12 col-lg-4">
-                <div class="textbox-border">
-                  <h5>Aletheia Therapeutics is located on the 7th floor of Cabrini Tower</h5>
-                  <h4>901 Boren Avenue<br>Suite 701<br>Seattle, Washington 98104</h4>
-                  <h4><a href="tel:+1-206-473-2435">(206) 473-2435</a></h4>
-            </div>
-          </div>
-          <div class="tour-video col-12 col-lg-4 pt-4 pt-lg-0 d-flex justify-content-center align-items-center">
-              <div class="frame">
-                <iframe width="280" height="210" src="https://www.youtube.com/embed/ivGcfBvQlBY">
-                </iframe>
-              </div>
-          </div>
+
+    </div>
+  </div>
+
+  <div id="Location" class="location container-fluid">
+    <div class="row">
+      <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
+        <div class="frame">
+          <!--     Google Maps Insert     -->
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10759.606399097345!2d-122.3340117302246!3d47.60860299999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf448ba596c1879e9!2sEnvision%20Therapies!5e0!3m2!1sen!2sus!4v1664090990981!5m2!1sen!2sus"
+            width="280" height="210" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 px-5 px-lg-0">
+        <div class="textbox-border">
+          <h5>Aletheia Therapeutics is located on the 7th floor of Cabrini Tower</h5>
+          <h4>901 Boren Avenue<br>Suite 701<br>Seattle, Washington 98104</h4>
+          <h4><a href="tel:+1-206-473-2435">(206) 473-2435</a></h4>
+        </div>
+      </div>
+      <div class="tour-video col-12 col-lg-4 pt-4 pt-lg-0 d-flex justify-content-center align-items-center">
+        <div class="frame">
+          <iframe width="280" height="210" src="https://www.youtube.com/embed/ivGcfBvQlBY">
+          </iframe>
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  <div id="Telehealth" class="telehealth container-fluid pb-5">
+    <div>
+      <h3>Telehealth & In Person Sessions</h3>
+    </div>
+    <div class="row align-items-start pb-5">
+      <div class="col-md-3">
+        <p>
+          <strong>In person sessions</strong> remain an option for therapy. There is some benefit in having time to
+          step away from the business of the day and prepare for a session. The time following the
+          session also give a moment to acclimate back to the rthym of the day following sessions.
+          As convenient as telehealth may be, we relate differently with people in a room than we do
+          with a person on a screen. Body language and expressions are not always portrayed through a
+          camera. As needed, there is flexibility to change the scheduled format from in person to
+          telehealth or vice versa, thankfully.
+        </p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/Telehealth.jpg" alt="Telehealth Image" class="p-2">
+      </div>
+      <div class="col-md-3">
+        <img src="images/InPerson.jpg" alt="In Person Image" class="p-2">
+      </div>
+      <div class="col-md-3">
+        <p>
+          <strong>Telehealth</strong> does provide a flexible platform for therapy. When distance or health are concerns,
+          arranging for a telehealth sessions offers a helpful adaptation. There are some considerations
+          like privacy and safety. I typically meet with clients through Doxy.me - a HIPAA/HITECH compliant
+          platform. As a client, it's helpful to be mindful that you're in a safe, relaxing, and private place
+          to attend the session. There is much work that can be done through a virtual meeting, without
+          making the way to my office on First Hill.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div id="Sessions" class="sessions container-fluid pb-5">
+    <h3>Sessions</h3>
+    <div class="row pb-5 d-flex">
+        <div class="col-md pt-2 pt-md-0">
+          <div class="card h-100 mx-auto">
+            <div class="card-header">
+              <h5 class="card-title">Introduction Consultation</h5>
+            </div>
+            <div class="card-body">
+              <p class="card-text align-self-center">
+              Currently, openings are limitted. When there are openings, 30 minute introductions give a moment to get a feel for the relationship and presense. One of the greatest predictors for success is a client's relationship with the provider.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md pt-2 pt-md-0">
+          <div class="card h-100 mx-auto">
+            <div class="card-header">
+              <h5 class="card-title">Hour Sessions</h5>
+            </div>
+            <div class="card-body">
+              <p class="card-text align-self-center">
+              Sessions typically last 55 minutes. (Some insurances limit the time to 45 minutes.) This time can take on different qualities depending on concerns addressed. A cornerstone of psychotherapy is building insight in order to create change. There are many settings and activites that are therapuetic, and when sitting with another person who is attentive and atuned, there are some insights that other activities might not provide. Each session allows for adjustment so that the real change comes between those sessions.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md pt-2 pt-md-0">
+          <div class="card h-100 mx-auto">
+            <div class="card-header">
+              <h5 class="card-title">Extended Sessions</h5>
+            </div>
+            <div class="card-body">
+              <p class="card-text align-self-center">
+              Much can be accomplished and covered in an hour. There are, however, times in which some extra time may be helpful to complete EMDR, engage in assessment, or planning future sessions. Couples sessions can benefit from the extra time. If exteneded sessions are necessary, they will be planned before the session begins.
+              </p>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
 </body>
 
 <footer class="fixed-bottom text-center">
-    &copy;<span class="copyright-year">2023</span></br>
-    Aletheia Therapuetics, PLLC</br>
-    Seattle, WA
+  &copy;<span class="copyright-year">2023</span></br>
+  Aletheia Therapuetics, PLLC</br>
+  Seattle, WA
 </footer>
 
 <script src="index.js"></script>
