--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!--        Google Fonts                        -->
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Prata&family=Vollkorn&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Average+Sans&family=Prata&family=Ubuntu:wght@700&family=Vollkorn&display=swap');
   </style>
 
   <!--         Google Icons                       -->
@@ -120,7 +120,7 @@
         <img src="images/headshot.jpg" alt="Michael Sibrava" class="portrait p-2">
       </div>
     </div>
-    <div class="training pt-4">
+    <div class="training">
       <ul>
         <li>
           <span class="certifaction">EMDR Trained</span>
@@ -167,11 +167,11 @@
     </div>
   </div>
 
-  <div id="Telehealth" class="telehealth container-fluid pb-5">
+  <div id="Telehealth" class="telehealth container-fluid">
     <div>
       <h3>Telehealth & In Person Sessions</h3>
     </div>
-    <div class="row align-items-start pb-5">
+    <div class="row align-items-start">
       <div class="col-md-3">
         <p>
           <strong>In person sessions</strong> remain an option for therapy. There is some benefit in having time to
@@ -202,7 +202,7 @@
     </div>
   </div>
 
-  <div id="Sessions" class="sessions container-fluid pb-5">
+  <div id="Sessions" class="sessions container-fluid">
     <h3>Sessions</h3>
     <div class="row pb-5 d-flex">
         <div class="col-md pt-2 pt-md-0">
@@ -244,9 +244,29 @@
     </div>
   </div>
 
+  <div id="Insurance" class="insurance container-fluid pb-5">
+    <h3>Payment & Insurance</h3>
+    <div class="row justify-content-end">
+      <div class="col-md-6 px-5">
+        <div class="card">
+          <div class="card-body">
+            <div class="card-text">
+              <p>In network with</p>
+              <p>AllOne Health EAP, Aetna, Cigna, Kaiser Permanente PPO, First Choice PPO, Lifesynch/Humana, Lyra, MHN, MHNet, Multiplan, Tricare, Regence Blue Shield, Premera, United Behavioral Health/Optum, United Healthcare, Beacon Health</p>
+              <p>Check with your insurance customer service to confirm coverage. I am happy to work with other insurance companies if I'm not a preferred provider. Typically out of network claims will cover a certain percentage of the fee.</p>
+              <p>Payments can be made by cash, check, <i class="bi bi-paypal"></i><span class="paypal">PayPal</span>, or <iconify-icon icon="simple-icons:zelle"></iconify-icon><span class="d-none">Z</span><span class="zelle">elle</span>. Payments can also be made through HSA and FSA accounts.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
+<!--              Iconify(https://iconify.design/)                       -->
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 
 <footer class="fixed-bottom text-center">
