--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
-    content="INCOMING CLIENT FORMS. Michael Sibrava provides evidence based therapy shaped by experience and adapted to each client's needs.">
+    content="TRAUMA INFORMED, CONSUMER CENTERED COUNSELING. Michael Sibrava provides evidence based therapy shaped by experience and adapted to each client's needs.">
   <meta name="keywords"
     content="counseling, PTSD, therapy, psychotherapy, anxiety, premera, counselor, seattle, seattle counselor">
   <!--      Open Graph Tags-->
