--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </style>
 
   <!--         Google Icons                       -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
   <!--       Bootstrap 5.2.1                     -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -83,6 +83,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Insurance">Insurance</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Schedule/index.html"><span class="material-symbols-outlined">edit_calendar</span>Schedule</a>
           </li>
         </ul>
       </div>
