Fixed the break with google icons

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 
   <!--        Google Fonts                        -->
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Average+Sans&family=Prata&family=Ubuntu:wght@700&family=Vollkorn&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Average+Sans&family=Prata&family=Ubuntu:wght@700&family=Vollkorn&family=Material+Symbols+Outlined&?family=Material+Icons&display=swap');
   </style>
 
   <!--         Google Icons                       -->
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
   <!--       Bootstrap 5.2.1                     -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
