--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!--        Google Fonts                        -->
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Average+Sans&family=Prata&family=Ubuntu:wght@700&family=Vollkorn&family=Material+Symbols+Outlined&?family=Material+Icons&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Average+Sans&family=Prata&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Ubuntu:wght@700&family=Vollkorn&family=Salsa&family=Material+Symbols+Outlined&?family=Material+Icons&display=swap');
   </style>
 
   <!--         Google Icons                       -->
@@ -131,9 +131,6 @@
         </li>
         <li>
           <span class="certifaction">Certified Clinical Trauma Professional</span>
-        </li>
-        <li>
-          <span class="certifaction">ADHD - Certified Clinical Services Provide</span>
         </li>
         <li>
           <span class="certifaction">PEERS<sup>&reg</sup> Certified Provider</span>
@@ -256,9 +253,9 @@
           <div class="card-body">
             <div class="card-text">
               <p>In network with</p>
-              <p>AllOne Health EAP, Aetna, Cigna, Kaiser Permanente PPO, First Choice PPO, Lifesynch/Humana, Lyra, MHN, MHNet, Multiplan, Tricare, Regence Blue Shield, Premera, United Behavioral Health/Optum, United Healthcare, Beacon Health</p>
+              <p>AllOne Health EAP, Aetna, Cigna, First Choice PPO, Kaiser Permanente PPO, Lifesynch/Humana, Lyra, MHN, MHNet, Multiplan, Tricare, Regence Blue Shield, Premera, United Behavioral Health/Optum, United Healthcare, Carelon</p>
               <p>Check with your insurance customer service to confirm coverage. I am happy to work with other insurance companies if I'm not a preferred provider. Typically out of network claims will cover a certain percentage of the fee.</p>
-              <p>Payments can be made by cash, check, <i class="bi bi-paypal"></i><span class="paypal">PayPal</span>, or <iconify-icon icon="simple-icons:zelle"></iconify-icon><span class="d-none">Z</span><span class="zelle">elle</span>. Payments can also be made through HSA and FSA accounts.</p>
+              <p>Payments can be made by cash, check, <i class="bi bi-paypal"></i><span class="paypal">PayPal</span>, <span class="venmoa">ve</span><span class="venmob">nmo</span>, </span>or <iconify-icon icon="simple-icons:zelle"></iconify-icon><span class="d-none">Z</span><span class="zelle">elle</span>. Payments can also be made through HSA and FSA accounts.</p>
             </div>
           </div>
         </div>
