--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               <p>In network with</p>
               <p>AllOne Health EAP, Aetna, Cigna, First Choice PPO, Kaiser Permanente PPO, Lifesynch/Humana, Lyra, Multiplan, Tricare, Regence Blue Shield, Premera, United Behavioral Health/Optum, United Healthcare, Carelon</p>
               <p>Check with your insurance customer service to confirm coverage. I am happy to work with other insurance companies if I'm not a preferred provider. Typically out of network claims will cover a certain percentage of the fee.</p>
-              <p>Payments can be made by cash, check, <i class="bi bi-paypal"></i><span class="paypal">PayPal</span>, <span class="venmoa">ve</span><span class="venmob">nmo</span>, </span>or <iconify-icon icon="simple-icons:zelle"></iconify-icon><span class="d-none">Z</span><span class="zelle">elle</span>. Payments can also be made through HSA and FSA accounts.</p>
+              <p>Payments can be made by cash, check, <i class="bi bi-paypal"></i><span class="paypal">PayPal</span>, or <span class="venmoa">ve</span><span class="venmob">nmo</span><!--, </span>or <iconify-icon icon="simple-icons:zelle"></iconify-icon><span class="d-none">Z</span><span class="zelle">elle</span>-->. Payments can also be made through HSA and FSA accounts.</p>
             </div>
           </div>
         </div>
