--- a/index.html
+++ b/index.html
@@ -5,15 +5,58 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
-    content="TRAUMA INFORMED, CONSUMER CENTERED COUNSELING. Michael Sibrava provides evidence based therapy shaped by experience and adapted to each client's needs.">
+  content="Trauma-informed, consumer-centered counseling in Seattle, WA. Michael Sibrava, LMHC, provides evidence-based therapy tailored to each client's needs.">
   <meta name="keywords"
     content="counseling, PTSD, therapy, psychotherapy, anxiety, premera, counselor, seattle, seattle counselor">
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Person",
+            "name": "Michael Sibrava",
+            "jobTitle": "National Certified Counselor (NCC), Licensed Mental Health Counselor (LMHC)",
+            "image": "https://aletheiapllc.com/images/michael-sibrava-seattle-therapist.jpg",
+            "url": "https://aletheiapllc.com",
+            "worksFor": {
+              "@type": "LocalBusiness",
+              "name": "Aletheia Therapeutics"
+            },
+            "sameAs": [
+              "https://www.psychologytoday.com/us/therapists/michael-sibrava-seattle-wa/57672",
+              "https://www.linkedin.com/in/michael-sibrava",
+              "https://therapist.com/clinician/michael-sibrava-125378/"
+            ]
+          },
+          {
+            "@type": "LocalBusiness",
+            "name": "Aletheia Therapeutics",
+            "image": "https://aletheiapllc.com/images/michael-sibrava-seattle-therapist.jpg",
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "901 Boren Ave, Suite 701",
+              "addressLocality": "Seattle",
+              "addressRegion": "WA",
+              "postalCode": "98104"
+            },
+            "telephone": "+1-206-473-2435",
+            "url": "https://aletheiapllc.com",
+            "sameAs": [
+              "https://www.psychologytoday.com/us/therapists/michael-sibrava-seattle-wa/57672",
+              "https://www.linkedin.com/in/michael-sibrava",
+              "https://therapist.com/clinician/michael-sibrava-125378/"
+            ]
+          }
+        ]
+      }
+  </script>
+
   <!--      Open Graph Tags-->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Aletheia Therapeutics - Michael Sibrava LMHC" />
   <meta property="og:description" content="Trauma informed counseling in Seattle, Washington." />
   <meta property="og:url" content="https://aletheiapllc.com/" />
-  <meta property="og:image" content="https://aletheiapllc.com/images/ogimage.jpg" />
+  <meta property="og:image" content="https://aletheiapllc.com/images/michael-sibrava-therapist-og.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <!--      Favicons                           -->
@@ -26,7 +69,7 @@
 
   <!--        Google Fonts                        -->
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Average+Sans&family=Prata&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Ubuntu:wght@700&family=Vollkorn&family=Salsa&family=Material+Symbols+Outlined&?family=Material+Icons&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Average+Sans&family=Prata&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Ubuntu:wght@700&family=Vollkorn&family=Salsa');
   </style>
 
   <!--         Google Icons                       -->
@@ -106,40 +149,33 @@
     </div>
   </div>
 
-  <div id="About" class="about container-fluid">
-    <div class="row align-items-center">
-      <div class="col-md-7">
-        <h3>Michael Sibrava, NCC, LMHC</h3>
-        <h5>he/him</h5>
-        <p class="text-center text-md-start">Michael Sibrava brings over 20 years of experience working in community
-          mental health settings, private practice, group and classroom settings.
-          His experiences working with a wide range of people informs his ability to provide flexible, adaptive
-          treatment to meet a person’s unique needs.
-          Having worked in such diverse settings allowed to Michael recognize that each person has their own foundation
-          of talents and resources from which to grow. This insight instructs the respect Michael has for each person’s
-          experience and
-          dignity.</p>
-      </div>
-      <div class="photo col">
-        <img src="images/headshot.jpg" alt="Michael Sibrava" class="portrait p-2">
-      </div>
+<div id="About" class="about container-fluid">
+  <div class="row align-items-center">
+    <div class="col-md-7">
+      <h3>Michael Sibrava, NCC, LMHC</h3>
+      <h5>he/him</h5>
+      <p class="text-center text-md-start">
+        Michael Sibrava, NCC, LMHC, is a licensed mental health counselor providing trauma-informed counseling in Seattle, WA. 
+        He brings over 20 years of experience working in community mental health, private practice, group, 
+        and classroom settings. 
+        His work integrates trauma-informed, evidence-based approaches tailored to each client’s unique needs. 
+        Michael emphasizes building insight, resilience, and respect for each person’s experience and dignity.
+      </p>
     </div>
-    <div class="training">
-      <ul>
-        <li>
-          <span class="certifaction">EMDR Trained</span>
-        </li>
-        <li>
-          <span class="certifaction">Certified Clinical Trauma Professional</span>
-        </li>
-        <li>
-          <span class="certifaction">PEERS<sup>&reg</sup> Certified Provider</span>
-        </li>
-      </ul>
-
-
+    <div class="photo col">
+      <img src="images/michael-sibrava-seattle-therapist.jpg" 
+           alt="Michael Sibrava, LMHC, therapist in Seattle, Washington"  
+           class="portrait p-2">
     </div>
   </div>
+  <div class="training">
+    <ul>
+      <li><span class="certifaction">EMDR Trained</span></li>
+      <li><span class="certifaction">Certified Clinical Trauma Professional</span></li>
+      <li><span class="certifaction">PEERS<sup>&reg</sup> Certified Provider</span></li>
+    </ul>
+  </div>
+</div>
 
   <div id="Location" class="location container-fluid">
     <div class="row">
@@ -175,9 +211,9 @@
     <div class="row align-items-start">
       <div class="col-md-3">
         <p>
-          <strong>In person sessions</strong> remain an option for therapy. There is some benefit in having time to
-          step away from the business of the day and prepare for a session. The time following the
-          session also give a moment to acclimate back to the rthym of the day following sessions.
+          <strong>In-Person sessions</strong> remain an option for therapy. There is some benefit in having time to
+          step away from the business of the day and prepare for a session. The time following the 
+          session also gives a moment to acclimate back to the rhythm of the day.
           As convenient as telehealth may be, we relate differently with people in a room than we do
           with a person on a screen. Body language and expressions are not always portrayed through a
           camera. As needed, there is flexibility to change the scheduled format from in person to
@@ -185,19 +221,19 @@
         </p>
       </div>
       <div class="col-md-3">
-        <img src="images/Telehealth.jpg" alt="Telehealth Image" class="p-2">
+        <img src="images/Telehealth.jpg" alt="Counselor providing a telehealth session" class="p-2">
       </div>
       <div class="col-md-3">
-        <img src="images/InPerson.jpg" alt="In Person Image" class="p-2">
+        <img src="images/InPerson.jpg" alt="In-Person counseling session in office" class="p-2">
       </div>
       <div class="col-md-3">
         <p>
           <strong>Telehealth</strong> does provide a flexible platform for therapy. When distance or health are concerns,
-          arranging for a telehealth sessions offers a helpful adaptation. There are some considerations
+          arranging for a telehealth session offers a helpful adaptation. There are some considerations
           like privacy and safety. I typically meet with clients through Doxy.me - a HIPAA/HITECH compliant
           platform. As a client, it's helpful to be mindful that you're in a safe, relaxing, and private place
-          to attend the session. There is much work that can be done through a virtual meeting, without
-          making the way to my office on First Hill.
+          to attend the session. Much work can be accomplished through a virtual meeting, without the need to
+          travel to my First Hill office.
         </p>
       </div>
     </div>
@@ -213,7 +249,7 @@
             </div>
             <div class="card-body">
               <p class="card-text align-self-center">
-              Currently, openings are limitted. When there are openings, 30 minute introductions give a moment to get a feel for the relationship and presense. One of the greatest predictors for success is a client's relationship with the provider.
+              Currently, openings are limited. When available, 30-minute introductions provide an opportunity to get a feel for the relationship and presence. One of the greatest predictors for success is a client's relationship with the provider.
               </p>
             </div>
           </div>
@@ -225,7 +261,7 @@
             </div>
             <div class="card-body">
               <p class="card-text align-self-center">
-              Sessions typically last 55 minutes. (Some insurances limit the time to 45 minutes.) This time can take on different qualities depending on concerns addressed. A cornerstone of psychotherapy is building insight in order to create change. There are many settings and activites that are therapuetic, and when sitting with another person who is attentive and atuned, there are some insights that other activities might not provide. Each session allows for adjustment so that the real change comes between those sessions.
+              Sessions typically last 55 minutes. (Some insurances limit the time to 45 minutes.) This time can take on different qualities depending on concerns addressed. A cornerstone of psychotherapy is building insight in order to create change. There are many settings and activities that are therapeutic, and when sitting with someone who is attentive and attuned, certain insights may arise that other activities cannot provide. Each session allows for adjustment so that the real change comes between those sessions.
               </p>
             </div>
           </div>
@@ -237,7 +273,7 @@
             </div>
             <div class="card-body">
               <p class="card-text align-self-center">
-              Much can be accomplished and covered in an hour. There are, however, times in which some extra time may be helpful to complete EMDR, engage in assessment, or planning future sessions. Couples sessions can benefit from the extra time. If exteneded sessions are necessary, they will be planned before the session begins.
+              Much can be accomplished and covered in an hour. There are, however, times in which some extra time may be helpful to complete EMDR, engage in assessment, or planning future sessions. Couples sessions can benefit from the extra time. If extended sessions are necessary, they will be planned in advance.
               </p>
             </div>
           </div>
@@ -262,20 +298,21 @@
       </div>
     </div>
   </div>
+  <footer class="fixed-bottom text-center">
+  &copy;<span class="copyright-year">2024</span>
+  <address>
+    Aletheia Therapeutics, PLLC<br>
+    Seattle, WA
+  </address>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
 <!--              Iconify(https://iconify.design/)                       -->
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
-<footer class="fixed-bottom text-center">
-  &copy;<span class="copyright-year">2024</span></br>
-  Aletheia Therapuetics, PLLC</br>
-  Seattle, WA
-</footer>
-
-<script src="index.js"></script>
 
 </html>
