Unbroke Google Material API

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <!--        Google Fonts                        -->
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Average+Sans&family=Prata&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Ubuntu:wght@700&family=Vollkorn&family=Salsa');
+    @import url('https://fonts.googleapis.com/css2?family=Andika:wght@700&family=Average+Sans&family=Prata&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Ubuntu:wght@700&family=Vollkorn&family=Salsa&family=Material+Symbols+Outlined&?family=Material+Icons&display=swap');
   </style>
 
   <!--         Google Icons                       -->
